Fix spacing in sub nav

--- a/components/sub-nav/sub-nav.module.css
+++ b/components/sub-nav/sub-nav.module.css
@@ -1,5 +1,5 @@
 .activeItem {
-  background-color: gray;
+  background-color: #ffffff;
 }
 
 .list {
@@ -25,12 +25,18 @@
   display: flex;
   margin: 0 auto;
   max-width: var(--containerMaxWidth);
+  justify-content: space-between;
 }
 
 .arrowAvatar.arrowAvatar {
   background-color: #94c64e;
   width: 30px;
   height: 30px;
+}
+
+.navContainer {
+  flex-grow: 1;
+  max-width: 700px;
 }
 
 .subNavLink {
@@ -49,6 +55,7 @@
 
 .listContainer {
   display: flex;
+  justify-content: space-between;
 }
 
 .container {
